responsive embeds, fix initial menu state on mobile

--- a/style.css
+++ b/style.css
@@ -37,6 +37,30 @@ body {
   padding: 0 20px 20px 20px;
 }
 
+.iframe-container {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+}
+
+.map-container {
+  padding-bottom: 75%;
+}
+
+.video-container {
+  padding-bottom: 56.25%;
+}
+ 
+.iframe-container iframe,
+.iframe-container object,
+.iframe-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @media (min-width: 768px) {
   .container-narrow {
     max-width: 730px;
